--- a/src/components/MyComponent.css
+++ b/src/components/MyComponent.css
@@ -1,3 +1,113 @@
+*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
+    all: unset;
+    display: revert;
+}
+
+/* Preferred box-sizing value */
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* Fix mobile Safari increase font-size on landscape mode */
+html {
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
+/* Reapply the pointer cursor for anchor tags */
+a, button {
+    cursor: revert;
+}
+
+/* Remove list styles (bullets/numbers) */
+ol, ul, menu {
+    list-style: none;
+}
+
+/* For img to not be able to exceed their container */
+img {
+    max-inline-size: 100%;
+    max-block-size: 100%;
+}
+
+/* removes spacing between cells in tables */
+table {
+    border-collapse: collapse;
+}
+
+/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
+input, textarea {
+    -webkit-user-select: auto;
+}
+
+/* revert the 'white-space' property for textarea elements on Safari */
+textarea {
+    white-space: revert;
+}
+
+/* minimum style to allow to style meter element */
+meter {
+    -webkit-appearance: revert;
+    appearance: revert;
+}
+
+/* preformatted text - use only for this feature */
+:where(pre) {
+    all: revert;
+    box-sizing: border-box;
+}
+
+/* reset default text opacity of input placeholder */
+::placeholder {
+    color: unset;
+}
+
+/* remove default dot (•) sign */
+::marker {
+    content: initial;
+}
+
+/* fix the feature of 'hidden' attribute.
+   display:revert; revert to element instead of attribute */
+:where([hidden]) {
+    display: none;
+}
+
+/* revert for bug in Chromium browsers
+   - fix for the content editable attribute will work properly.
+   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element*/
+:where([contenteditable]:not([contenteditable="false"])) {
+    -moz-user-modify: read-write;
+    -webkit-user-modify: read-write;
+    overflow-wrap: break-word;
+    -webkit-line-break: after-white-space;
+    -webkit-user-select: auto;
+}
+
+/* apply back the draggable feature - exist only in Chromium and Safari */
+:where([draggable="true"]) {
+    -webkit-user-drag: element;
+}
+
+/* Revert Modal native behavior */
+:where(dialog:modal) {
+    all: revert;
+    box-sizing: border-box;
+}
+
+:root {
+    font-family: Inter, sans-serif;
+    font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+}
+@supports (font-variation-settings: normal) {
+    :root { font-family: InterVariable, sans-serif; }
+}
+
+
+
 /* CARDS */
 
 .cards {
@@ -25,11 +135,12 @@
     height: 40px;
     border-radius: 50%;
     border: none;
-    background-color: #007bff;
+    background-color: #92B0FF;
     color: white;
     font-size: 24px;
     cursor: pointer;
     margin: 100px 100px;
+      align-self: center;
   }
   
   
@@ -75,7 +186,7 @@
 }
 
 
-/* REGISRATION */
+/* REGISTRATION */
 .registration-container {
   width: 400px; /* Ширина контейнера */
   margin: 0 auto; /* Центрирование контейнера */
@@ -115,4 +226,98 @@
 
 .registration-container button:hover {
   background-color: #819cde; 
+}
+
+
+/*HEADER*/
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    .header-wrapper{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: flex-end;
+        justify-content: space-between;
+        background-color: white;
+
+        .header-menu{
+            margin-left: 20px;
+            margin-top: 20px;
+            padding-bottom: 20px;
+            display: flex;
+            flex-wrap: wrap;
+
+            .header-item{
+                margin-right: 40px;
+                list-style-type: none;
+
+                .header-link{
+                    text-decoration: none;
+                    color: #808080;
+                }
+
+                .header-link:hover, .header-link:focus, .header-link:active{
+                    color: #92B0FF;
+
+                }
+            }
+
+            .header-item:last-child{
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+/*FOOTER*/
+
+.footer {
+    width: 100%;
+    background-color: #808080;
+
+    .footer-wrapper {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+
+        .footer-navbar {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: column;
+            align-content: center;
+
+            .footer-item {
+                padding-top: 30px;
+                padding-bottom: 20px;
+
+            }
+
+            .footer-chat {
+                align-self: center;
+                padding-bottom: 30px;
+            }
+        }
+    }
+
+}
+
+/*COVER*/
+
+.cover-wrapper{
+    background-color: #808080;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+
+    .cover-text{
+        padding: 450px;
+        font-size: 70px;
+        color: white;
+        text-align: center;
+    }
 }
