--- a/src/components/MyComponent.css
+++ b/src/components/MyComponent.css
@@ -123,14 +123,12 @@ meter {
 
 .cards__name{
     padding: 5% 5%;
-    width: 30%;
+    width: 40%;
 
 }
-
-
   
   .load-more-btn {
-      width: 5%;
+      width: 10%;
   }
   
   
@@ -324,7 +322,7 @@ meter {
     flex-wrap: wrap;
 
     .settings-button{
-        width: 8%;
+        width: 48px;
         padding: 30px 10px;
         align-self: flex-start;
     }
@@ -341,9 +339,47 @@ meter {
 
         .profile-name {
             padding-top: 20px;
-            font-size: 24px;
+            font-size: 48px;
             align-self: center;
             text-align: center;
         }
+    }
+}
+
+/*ProfileCards*/
+
+.profile-gallery-wrapper {
+    width: 100%;
+    padding-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+
+
+    .profile-cards-wrapper {
+        width: 50%;
+        padding-left: 20px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .profile-cards-text {
+            font-size: 48px;
+            padding-left: 20px;
+            align-self: flex-start;
+            text-align: center;
+        }
+
+        .profile-cards-btn {
+            width: 238px;
+            align-self: flex-start;
+            padding-left: 15px;
+        }
+
+        .profile-cards {
+            display: flex;
+            flex-wrap: wrap;
+            align-self: center;
+        }
+
+
     }
 }
