--- a/src/components/MyComponent.css
+++ b/src/components/MyComponent.css
@@ -232,16 +232,73 @@ meter {
     margin-bottom: 20px;
 }
 
-.login{
+.login__link{
     text-decoration: underline; 
     color: #92B0FF; 
   }
   
 
-.login:hover {
+.login__link:hover {
     color: #819cde; /* Изменяем цвет при наведении */
   }
 
+/* LOGIN */
+.login h2{
+    color: black;
+    margin-top: 90px;
+    text-align: center;
+    font-size: 36px;
+}
+.login-container {
+  width: 400px; /* Ширина контейнера */
+  margin: 0 auto; /* Центрирование контейнера */
+  background-color: #808080;
+  border-radius: 10px; /* Закругление краев контейнера */
+  padding: 20px; /* Отступы внутри контейнера */
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.login-container p{
+    color: white;
+}
+
+.login-container form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.login-container label {
+  margin-bottom: 15px; /* Отступ между метками и полями ввода */
+}
+
+.login-container input {
+  padding: 8px; /* Отступы внутри текстовых полей */
+  margin-bottom: 15px; /* Отступ между полями ввода */
+  border-radius: 30px; /* Закругление краев текстовых полей */
+  border: 1px solid #ccc; /* Граница текстовых полей */
+  background-color: white;
+}
+.button-container {
+    text-align: center; /* Центрирование содержимого по горизонтали */
+}
+
+.login__button{
+    text-align: center;
+  padding: 10px; 
+  border-radius: 25px; 
+  border: none; 
+  background-color: #92B0FF; 
+  color: white; 
+  cursor: pointer; 
+  margin-bottom: 10px;
+}
+
+.login__button:hover {
+  background-color: #819cde; 
+}
 
 /*HEADER*/
 .header{
